--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.23)
 project(HW4T2 C)
 
 set(CMAKE_C_STANDARD 11)
-add_executable(RepoGit1 TestRewrite1/num3.c  TestRewrite1/text.txt)
+add_executable(RepoGit1
+        Test3/num2/main.c
+        Test3/num2/stack.c
+        Test3/num2/stack.h)
