--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,8 @@ cmake_minimum_required(VERSION 3.23)
 project(HW4T2 C)
 
 set(CMAKE_C_STANDARD 11)
-add_executable(RepoGit1 TestRewrite1/num3.c  TestRewrite1/text.txt)
+add_executable(RepoGit1
+        hw09/main.c
+        hw09/list.c
+        hw09/hashTable.c
+        hw09/tests.c)
